k8s/deploy-frntend.yml
# ----------------- Frontend Deployment & Service -----------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-monitor-frontend
  labels:
    app: stream-monitor-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stream-monitor-frontend
  template:
    metadata:
      labels:
        app: stream-monitor-frontend
    spec:
      containers:
      - name: frontend
        image: 038462756156.dkr.ecr.us-east-1.amazonaws.com/stream-monitor-frontend:latest # Use specific version tag
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
