k8s/psql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stream-monitor-db
spec:
  selector:
    app: stream-monitor-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
